# dependencies

./: .gitignore  .gitmodules  .project  BuildMacros.cmake  CMakeLists.txt  OCMDepsBuildMacros.cmake  OpenCMISS.cmake  OpenCMISSLocalConfig.cmake  OpenCMISSLocalConfig.default.cmake  README.rst  newbuild
